--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0"></script>
     <title>PoKus</title>
 </head>
 <body>
@@ -16,8 +17,8 @@
             </div>
             <div class="flex gap-6 items-center">
                 <div class="hidden lg:flex lg:gap-5">
-                    <i id="btn-bell-lg" class="fa-solid fa-bell fa-md"></i>
-                    <i id="btn-user-lg" class="fa-solid fa-user fa-md"></i>
+                    <i id="btn-bell-lg" class="fa-solid fa-bell fa-md cursor-pointer"></i>
+                    <i id="btn-user-lg" class="fa-solid fa-user fa-md cursor-pointer"></i>
                 </div>
                 <i class="fa-solid fa-moon fa-md"></i>
             </div>
@@ -97,14 +98,33 @@
         </div>
     </main>
 
-    <section class="w-full h-[25vh] bg-gray-100 flex justify-center">
-        <div class="w-[350px] h-[140px] bg-white rounded-[10px] drop-shadow-md font-inter flex mt-8 flex-col justify-center gap-3 px-5 lg:w-[400px] lg:mt-[55px]">
+    <section class="w-full h-auto bg-gray-100 flex justify-center">
+        <div class="w-[350px] bg-white rounded-[10px] drop-shadow-md font-inter flex mt-8 flex-col justify-center gap-4 py-7 px-5 relative lg:w-[400px] lg:mt-[55px]">
             <h1 class="font-semibold">Today's Progress</h1>
-            <div class="flex items-center gap-3">
+            <div id="no-task" class="flex items-center gap-3">
+                <i class="fa-solid fa-plus fa-md bg-indigo-50 px-[8px] py-[7px] rounded-[50%]"></i>
+                <h2 class="">No sessions completed yet</h2>
+            </div>
+
+            <div id="task-complete" class="items-center gap-3 hidden">
                 <i class="fa-solid fa-check fa-md bg-indigo-100 px-[8px] py-[7px] rounded-[50%]"></i>
                 <h2 class="">Completed Sessions</h2>
             </div>
-            <div class="mt-3">
+
+            <div id="task-incomplete" class="items-center gap-3 hidden">
+                <i class="fa-solid fa-circle-notch fa-md fa-spin bg-indigo-100 px-[8px] py-[7px] rounded-[50%]"></i>
+                <h2 class="">Happy Study ❤️</h2>
+            </div>
+
+            <div class="w-full flex gap-2 pt-4">
+                <input id="input-box" class="w-[20.2rem] bg-gray-100 py-2 px-5 rounded-[10px] outline-none font-medium placeholder:text-[1rem] placeholder:font-medium" type="text" placeholder="add your task">
+                <button onclick="addTask()" class="bg-indigo-600 rounded-[10px] px-4 text-white hover:bg-indigo-700 font-medium">Add</button>
+            </div>
+
+            <ul id="list-container" class="grid gap-4 px-1 pt-4 text-[1rem]">
+            </ul>
+
+            <div class="mt-3 hidden">
                 <div class="w-[310px] h-2 bg-gray-200 rounded-[10px] lg:w-[360px]">
                     <div class="w-[200px] h-2 bg-indigo-600 rounded-[10px]"></div>
                 </div>
@@ -129,6 +149,7 @@
             </ul>
         </div>
     </footer>
+
 
     <script src="src/script.js"></script>
 </body>
