--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0"></script>
     <title>PoKus</title>
+    <link rel="icon" type="image/x-icon" href="/src/img/clock -logo-web.png">
 </head>
 <body>
     <header class="font-inter">
