--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h1 class="mb-5">2025 PoKus</h1>
             <ul class="flex gap-3 lg:gap-10"> 
                 <a href="https://saweria.co/FyyyyAYEE" target="_blank"><li class="hover:underline hover:underline-offset-1">Traktir ❤️</li></a>
-                <a href=""><li class="hover:underline hover:underline-offset-1">Social Media</li></a>
+                <a href="https://www.instagram.com/rafyr27/" target="_blank"><li class="hover:underline hover:underline-offset-1">Social Media</li></a>
             </ul>
         </div>
     </footer>
