--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 </div>
             </div>
             <div class="flex gap-5">
-                <button id="btn-play" class="w-[58px] h-[58px] border-[1px] border-gray-300 p-4 rounded-[50%] bg-white hover:bg-gray-100"><img id="play" class="w-[13px] ml-[6px]" src="/src/icon/play.svg" alt=""></button>
+                <button id="btn-play" class="w-[58px] h-[58px] border-[1px] border-gray-300 p-4 rounded-[50%] bg-white hover:bg-gray-100"><img loading="lazy" id="play" class="w-[13px] ml-[6px]" src="/src/icon/play.svg" alt=""></button>
 
-                <button id="btn-pause" class="w-[58px] h-[58px] border-[1px] border-gray-300 p-4 rounded-[50%] absolute bg-indigo-600 hover:bg-indigo-700 pause-btn"><img id="pause" class="w-[13px] ml-[6px] white-icon z-10" src="/src/icon/pause.svg"></button>
+                <button id="btn-pause" class="w-[58px] h-[58px] border-[1px] border-gray-300 p-4 rounded-[50%] absolute bg-indigo-600 hover:bg-indigo-700 pause-btn"><img loading="lazy" id="pause" class="w-[13px] ml-[6px] white-icon z-10" src="/src/icon/pause.svg"></button>
 
-                <button id="btn-reset" class="w-[58px] h-[58px] bg-white hover:bg-gray-100 p-4 border-[1px] border-gray-300 rounded-[50%]"><img id="reset-icon" class="w-[18px] mx-auto z-10" src="/src/icon/reset.svg" alt=""></button>
+                <button id="btn-reset" class="w-[58px] h-[58px] bg-white hover:bg-gray-100 p-4 border-[1px] border-gray-300 rounded-[50%]"><img loading="lazy" id="reset-icon" class="w-[18px] mx-auto z-10" src="/src/icon/reset.svg" alt=""></button>
                 
                 <button id="btn-setting-lg" class="w-[58px] bg-white hover:bg-gray-100 border-[1px] border-gray-300 p-4 rounded-[50%] hidden lg:block"><i class="fa-solid fa-gear" style="color: black"></i></button>
             </div>
@@ -152,6 +152,6 @@
     </footer>
 
 
-    <script src="src/script.js"></script>
+    <script src="src/script.js" defer></script>
 </body>
 </html>
