--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
 
             <div class="w-full flex gap-2 pt-4">
-                <input id="input-box" class="w-[20.2rem] bg-gray-100 py-2 px-5 rounded-[10px] outline-none font-medium placeholder:text-[1rem] placeholder:font-medium" type="text" placeholder="add your task">
+                <input id="input-box" class="w-[15rem] bg-gray-100 py-2 px-5 rounded-[10px] outline-none font-medium placeholder:text-[1rem] placeholder:font-medium lg:w-[20.2rem]" type="text" placeholder="add your task">
                 <button onclick="addTask()" class="bg-indigo-600 rounded-[10px] px-4 text-white hover:bg-indigo-700 font-medium">Add</button>
             </div>
 
